--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.gitignore.io/api/linux,macos,django,python
 # Edit at https://www.gitignore.io/?templates=linux,macos,django,python
 ### Django ###
+.idea/
 my_settings.py
 *.log
 *.pot
